# igs_challenge

./: CMakeLists.txt  README.md
data/: arquivo.txt
src/: MergeList.c  MergeList.h  Palindrome.c  Palindrome.h  PrintColor.c  PrintColor.h  RefactorCode.c  RomanNumber.c  RomanNumber.h
